--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\KL78613\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "python.pythonPath": "C:\\Users\\k_lid\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
     "python.linting.enabled": false
 }
